--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ lxml==4.9.3
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 matplotlib-inline==0.1.6
-matplotlib=3.7.0
+matplotlib==3.7.0
 mistune==3.0.1
 multidict==6.0.4
 mypy-extensions==1.0.0
